# RPGGameProject

./: CMakeLists.txt  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp
src/: Archer.cpp  Archer.hpp  Character.cpp  Character.h  Character.hpp  Entity.cpp  Entity.h  Entity.hpp  main.cpp
src/Entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/Entities/Enemies/: Enemy.cpp  Enemy.hpp
src/Game/: Combat.cpp  Combat.hpp  Game.cpp  Game.hpp
src/Roles/: Archer.cpp  Archer.hpp  Mage.cpp  Mage.hpp  Role.hpp  Warrior.cpp  Warrior.hpp
src/Utils/: UI.cpp  UI.hpp  Utils.cpp  Utils.hpp
